// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ComboboxOption should render with value and text 1`] = `
<div
  className="combobox-option"
>
  <div
    className="combobox-option-icon"
  />
  <p
    className="combobox-option-text"
  >
    text
  </p>
</div>
`;

exports[`ComboboxOption should render without value and text 1`] = `
<div
  className="combobox-option"
>
  <div
    className="combobox-option-icon"
  />
  <p
    className="combobox-option-text"
  />
</div>
`;
